<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_background"
    tools:context=".activity.IntroActivity">

    <TextView
        android:id="@+id/logoInfo"
        style="@style/logostyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:letterSpacing="0.1"
        android:text="@string/project_noted"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageInfo"
        android:layout_width="257dp"
        android:layout_height="313dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoInfo"
        app:srcCompat="@drawable/work_together" />

    <TextView
        android:id="@+id/txInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/m_bold"
        android:text="@string/Lets_get_started"
        android:textAlignment="textStart"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageInfo" />

    <TextView
        android:id="@+id/txInfo2"
        android:layout_width="353dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        android:text="Collaborate and Plan Together Across Multiple Devices on Project Noted Interface"
        android:textAlignment="textStart"
        android:textColor="@color/secondary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txInfo1" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/orange_button"
        android:fontFamily="@font/m_regular"
        android:shadowColor="#000000"
        android:text="@string/signin"
        android:textColor="@color/text_color_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txInfo2" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_button"
        android:fontFamily="@font/m_regular"
        android:shadowColor="@color/black"
        android:text="@string/signup"
        android:textColor="@color/pure_orange_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>