<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_background"
    android:orientation="vertical"
    tools:context=".activity.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/darkorange_color"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
            android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
            app:cardUseCompatPadding="true"
            android:elevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/my_profile_screen_content_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_user_image"
                    android:layout_width="@dimen/my_profile_user_image_size"
                    android:layout_height="@dimen/my_profile_user_image_size"
                    android:contentDescription="@string/image_ContentDescription"
                    android:src="@drawable/ic_user_place_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/Name"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/mobile"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                    android:background="@drawable/orange_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>