<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_add_task_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/task_item_add_item_text_padding"
            android:text="@string/action_add_list"
            android:fontFamily="@font/m_bold"
            android:textColor="@color/darkorange_color"
            android:textSize="@dimen/et_text_size"
            android:visibility="gone"
            tools:visibility="visible"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add_task_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/task_list_name_layout_margin"
            android:elevation="@dimen/card_elevation"
            app:cardUseCompatPadding="true"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            tools:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_close_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_ContentDescription"
                    android:padding="@dimen/close_task_list_padding"
                    android:src="@drawable/ic_cancel"/>
                <EditText
                    android:id="@+id/et_task_list_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/list_name"
                    android:hint="@string/list_name"
                    android:inputType="text"/>

                <ImageButton
                    android:id="@+id/ib_done_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_ContentDescription"
                    android:padding="@dimen/close_task_list_padding"
                    android:src="@drawable/ic_done"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/ll_task_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">
            
            <LinearLayout
                android:id="@+id/ll_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">
                
                <TextView
                    android:id="@+id/tv_task_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textColor="@color/darkorange_color"
                    android:textSize="16sp"
                    tools:text="Title"/>

                <ImageButton
                    android:id="@+id/ib_edit_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_ContentDescription"
                    android:padding="@dimen/close_task_list_padding"
                    android:visibility="gone"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/darkorange_color" />

                <ImageButton
                    android:id="@+id/ib_delete_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_ContentDescription"
                    android:padding="@dimen/close_task_list_padding"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/snackbar_error_color" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_color"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_edit_task_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/task_list_name_layout_margin"
                android:elevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true"
                android:visibility="gone"
                app:cardCornerRadius="10dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_close_editable_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_ContentDescription"
                        android:padding="@dimen/close_task_list_padding"
                        android:src="@drawable/ic_cancel"/>
                    <EditText
                        android:id="@+id/et_edit_task_list_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/list_name"
                        android:hint="@string/list_name"
                        android:inputType="text"/>

                    <ImageButton
                        android:id="@+id/ib_done_edit_list_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_ContentDescription"
                        android:padding="@dimen/close_task_list_padding"
                        android:src="@drawable/ic_done"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_card_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/task_list_recycler_view_margin"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/task_list_name_layout_margin"
                android:elevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true"
                android:visibility="gone"
                app:cardCornerRadius="10dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_close_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_ContentDescription"
                        android:padding="@dimen/close_task_list_padding"
                        android:src="@drawable/ic_cancel"/>
                    <EditText
                        android:id="@+id/et_card_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/card_name"
                        android:hint="@string/card_name"/>

                    <ImageButton
                        android:id="@+id/ib_done_cardname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_ContentDescription"
                        android:padding="@dimen/close_task_list_padding"
                        android:src="@drawable/ic_done"/>



                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:elevation="@dimen/card_elevation"
                android:foreground="?attr/selectableItemBackground"
                android:fontFamily="@font/m_bold"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/add_card"
                android:textColor="@color/darkorange_color"
                android:textSize="@dimen/et_text_size"
                tools:visibility="visible"/>



            
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>